--- a/res/scss/view/_settings-overview.scss
+++ b/res/scss/view/_settings-overview.scss
@@ -1,4 +1,6 @@
 
+
+
 #tab-overview
 {
 
@@ -85,8 +87,10 @@
               }
             }
             .status-line {
-              margin-left : 4px;
+              margin: 4px 4px 4px 15px;
+              display: inline-block;
             }
+
             button {
                height: 40px;
                padding: 10px 12px;
@@ -103,7 +107,7 @@
        div {
          background: #F4FBFC;
          border-radius: 6px;
-//height: 50px;
+
        }
     }
 
