--- a/res/scss/view/_settings-tools.scss
+++ b/res/scss/view/_settings-tools.scss
@@ -4,7 +4,7 @@
 	.button { min-height: 44px; }
 	.option, setting {
 			clear: both;
-			display: flex;
+			//display: flex;
 			margin: 15px 0;
 			div.name {
 					width: 220px;
