--- a/res/scss/elements/_setting.scss
+++ b/res/scss/elements/_setting.scss
@@ -24,7 +24,7 @@ setting{
     font-size: 14px;
     font-weight: 700;
     display: block;
-    padding: 20px 10px 20px 0;
+    padding: 20px 10px 0 0;
     box-sizing: border-box;
     color: $blue_closed;
 
@@ -35,11 +35,20 @@ setting{
      flex-basis: calc(100% - 250px);
      font-size: 14px;
      display: inline-block;
+
+     // Label for text input next to the input box.
+     inputlabel
+     {
+        min-width: 100px;
+        font-weight: 700;
+        display: inline-block;
+     }
+
   }
   // additional information
   info {
      display: block;
-     padding-top: 0px;
+     padding-top: 10px;
      color: #818181;
      font-size: 13px;
      margin: 6px 0;
@@ -85,7 +94,7 @@ setting{
 	&.switch
 	{
 		name, info, warning, error {
-			 margin-left: 70px;
+		//	 margin-left: 70px;
 		}
 	}
 
