--- a/res/scss/shortpixel-settings.scss
+++ b/res/scss/shortpixel-settings.scss
@@ -18,6 +18,7 @@
   @import 'view/settings';
   @import 'view/settings-overview';
   @import 'view/settings-advanced';
+  @import 'view/settings-onboarding';
 
   @import 'view/settings-tools';
 
