--- a/res/css/shortpixel-settings.css
+++ b/res/css/shortpixel-settings.css
@@ -71,51 +71,7 @@ div.spio-modal-title {
   display: none;
 }
 
-.wrap.is-shortpixel-settings-page {
-  /* TABS CONTROLS */
-  /* article.sp-tabs {
-      position: relative;
-      display: block;
-      width: 100%;
-      margin: 2em auto;
-
-  		section {
-  		    position: absolute;
-  		    display: block;
-  		    top: 1.8em;
-  		    left: 0;
-  		    width: 100%;
-  		    max-width: 100%;
-  		    box-sizing: border-box;
-  		    padding: 10px 20px;
-  		    z-index: 0;
-  				&.sel-tab {
-  				    position: relative;
-  				    box-shadow: 0 3px 3px rgba(0,0,0,0.1);
-  						.wp-shortpixel-tab-content {
-  						    visibility: visible !important;
-  						}
-  				}
-  				.wp-shortpixel-tab-content {
-  				    visibility: hidden;
-  				}
-  				&:first-child {
-  				    z-index: 1;
-  				}
-  		} // section
-  		section h2 a:focus, article.sp-tabs section#tab-resources a:focus {
-  			 box-shadow: none;
-  			 outline: none;
-  	 }
-  	 section.sel-tab, article.sp-tabs section.sel-tab h2 {
-   	    color: #333;
-   	    background-color: #fff;
-   	    z-index: 2;
-   	}
-  	h2:before {
-  	    content: none;
-  	}
-  } */
+.wrap.is-shortpixel-settings-page { /* TABS CONTROLS */
   /* .submit {
   	.button {
   		min-height: 44px;
@@ -351,6 +307,7 @@ div.spio-modal-title {
 }
 .wrap.is-shortpixel-settings-page .shortpixel-settings gridbox.width_70 {
   grid-template-columns: 70% 30%;
+  column-gap: 50px;
 }
 .wrap.is-shortpixel-settings-page .setting-tab .shortpixel-compression-options label.lossy span {
   border-top-left-radius: 6px;
@@ -387,6 +344,23 @@ div.spio-modal-title {
 }
 .wrap.is-shortpixel-settings-page .setting-tab .shortpixel-compression-options label input:checked + span {
   background-color: #116C7E;
+}
+.wrap.is-shortpixel-settings-page .setting-tab .smart-compression-explainer {
+  display: flex;
+  background-color: #fff;
+  flex-direction: column;
+  width: 200px;
+}
+.wrap.is-shortpixel-settings-page .setting-tab .smart-compression-explainer h4 {
+  margin: 6px 0;
+  color: #727272;
+}
+.wrap.is-shortpixel-settings-page .setting-tab .smart-compression-explainer img {
+  width: 80px;
+}
+.wrap.is-shortpixel-settings-page .setting-tab .smart-compression-explainer .shortpixel-help-link {
+  margin-top: 6px;
+  font-weight: 700;
 }
 .wrap.is-shortpixel-settings-page .setting-tab input[name=resizeWidth], .wrap.is-shortpixel-settings-page .setting-tab input[name=resizeHeight] {
   width: 100px;
@@ -715,9 +689,13 @@ div.spio-modal-title {
 .wrap.is-shortpixel-settings-page #tab-overview .wrapper.top-row .first-panel i {
   margin: 0 20px;
 }
-.wrap.is-shortpixel-settings-page #tab-overview .wrapper.top-row .first-panel i.ok {
+.wrap.is-shortpixel-settings-page #tab-overview .wrapper.top-row .first-panel i.mainblock-status.ok {
   width: 70px;
   height: 70px;
+}
+.wrap.is-shortpixel-settings-page #tab-overview .wrapper.top-row .first-panel i.mainblock-status.alert {
+  width: 70px;
+  height: 75px;
 }
 .wrap.is-shortpixel-settings-page #tab-overview .wrapper.top-row .second-panel {
   display: flex;
@@ -940,6 +918,9 @@ div.spio-modal-title {
 .wrap.is-shortpixel-settings-page .avifNoticeDisabled > .spio-inline-help {
   display: inline;
   float: none;
+}
+.wrap.is-shortpixel-settings-page #tab-nokey .onboarding-logo img {
+  width: 400px;
 }
 .wrap.is-shortpixel-settings-page #tab-tools .button {
   min-height: 44px;
