--- a/res/scss/view/_settings-optimisation.scss
+++ b/res/scss/view/_settings-optimisation.scss
@@ -48,9 +48,19 @@
 
 		}
 
-		.shortpixel-compression
+		.smart-compression-explainer
 		{
+			 display: flex;
+			 background-color: #fff;
+			 flex-direction: column;
+			 width: 200px;
 
+			 h4 { margin: 6px 0; color: #727272; }
+
+			 img {
+				 width: 80px;
+			 }
+			 .shortpixel-help-link { margin-top: 6px; font-weight: 700; }
 		}
 
 		// Resize inputs
