--- a/res/css/shortpixel-bulk.css
+++ b/res/css/shortpixel-bulk.css
@@ -365,7 +365,7 @@
   margin: 0;
   padding: 12px;
   background: #1FB5BF;
-  background: linear-gradient(90deg, #0f6a7d 0%, #0f6a7d 0%, #1cbecb 100%);
+  background: linear-gradient(90deg, #0f6a7d 0%, rgb(15, 106, 125) 0%, #1cbecb 100%);
   width: 100%;
   font-size: 16px;
   color: #ffffff;
@@ -497,7 +497,7 @@
   display: none;
   margin: 25px 0;
   width: 90%;
-  background: #1fbec9;
+  background: rgb(31, 190, 201);
   border: 1px solid #ccc;
   font-size: 26px;
   line-height: 26px;
@@ -560,7 +560,7 @@
   flex-grow: 1;
 }
 .wrap.is-shortpixel-bulk-page section.spio-progressbar .flex > div.result .line {
-  background: linear-gradient(90deg, #cccccc 0%, #cccccc 49.9%, white 51%, white 100%);
+  background: linear-gradient(90deg, rgb(204, 204, 204) 0%, rgb(204, 204, 204) 49.9%, rgb(255, 255, 255) 51%, rgb(255, 255, 255) 100%);
 }
 .wrap.is-shortpixel-bulk-page section.spio-progressbar .flex > div.select .line {
   width: 50%;
@@ -601,12 +601,8 @@
   color: #ccc;
   margin-top: 8px;
 }
-<<<<<<< HEAD
 .wrap.is-shortpixel-bulk-page section.panel.selection .spio-progressbar .select .line {
-=======
-.shortpixel-bulk-wrapper section.panel.selection .spio-progressbar .select .line {
->>>>>>> hotfix-5.6.4
-  background: linear-gradient(90deg, #1fbec9 0%, #1fbec9 49.9%, #cccccc 50%, #cccccc 100%);
+  background: linear-gradient(90deg, rgb(31, 190, 201) 0%, rgb(31, 190, 201) 49.9%, rgb(204, 204, 204) 50%, rgb(204, 204, 204) 100%);
 }
 .wrap.is-shortpixel-bulk-page section.panel.selection .spio-progressbar .select .text, .wrap.is-shortpixel-bulk-page section.panel.selection .spio-progressbar .select .step {
   color: #EC2C25;
@@ -745,12 +741,8 @@
 .wrap.is-shortpixel-bulk-page section.panel.summary .spio-progressbar .select .step {
   border-color: #1FBEC9;
 }
-<<<<<<< HEAD
 .wrap.is-shortpixel-bulk-page section.panel.summary .spio-progressbar .summary .line {
-=======
-.shortpixel-bulk-wrapper section.panel.summary .spio-progressbar .summary .line {
->>>>>>> hotfix-5.6.4
-  background: linear-gradient(90deg, #1fbec9 0%, #1fbec9 49.9%, #cccccc 50%, #cccccc 100%);
+  background: linear-gradient(90deg, rgb(31, 190, 201) 0%, rgb(31, 190, 201) 49.9%, rgb(204, 204, 204) 50%, rgb(204, 204, 204) 100%);
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary .spio-progressbar .summary .text, .wrap.is-shortpixel-bulk-page section.panel.summary .spio-progressbar .summary .step {
   color: #EC2C25;
@@ -891,12 +883,8 @@
 .wrap.is-shortpixel-bulk-page section.panel.process .spio-progressbar .select .step, .wrap.is-shortpixel-bulk-page section.panel.process .spio-progressbar .summary .step, .wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .select .step, .wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .summary .step {
   border-color: #1FBEC9;
 }
-<<<<<<< HEAD
 .wrap.is-shortpixel-bulk-page section.panel.process .spio-progressbar .process .line, .wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .process .line {
-=======
-.shortpixel-bulk-wrapper section.panel.process .spio-progressbar .process .line, .shortpixel-bulk-wrapper section.panel.finished .spio-progressbar .process .line {
->>>>>>> hotfix-5.6.4
-  background: linear-gradient(90deg, #1fbec9 0%, #1fbec9 49.9%, #cccccc 50%, #cccccc 100%);
+  background: linear-gradient(90deg, rgb(31, 190, 201) 0%, rgb(31, 190, 201) 49.9%, rgb(204, 204, 204) 50%, rgb(204, 204, 204) 100%);
 }
 .wrap.is-shortpixel-bulk-page section.panel.process .spio-progressbar .process .text, .wrap.is-shortpixel-bulk-page section.panel.process .spio-progressbar .process .step, .wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .process .text, .wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .process .step {
   color: #EC2C25;
@@ -1015,8 +1003,8 @@
   position: absolute;
   top: 0;
   width: 300px;
-  background: #0f6a7d50;
-  background: linear-gradient(90deg, #0f6a7d 0%, #0f6a7d 0%, rgba(0, 212, 255, 0) 100%);
+  background: rgba(15, 106, 125, 0.3137254902);
+  background: linear-gradient(90deg, rgb(15, 106, 125) 0%, rgb(15, 106, 125) 0%, rgba(0, 212, 255, 0) 100%);
   color: #fff;
   font-size: 20px;
   padding: 15px;
@@ -1137,12 +1125,8 @@
 .wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .select .step, .wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .summary .step, .wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .process .step {
   border-color: #1FBEC9;
 }
-<<<<<<< HEAD
 .wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .result .line {
-=======
-.shortpixel-bulk-wrapper section.panel.finished .spio-progressbar .result .line {
->>>>>>> hotfix-5.6.4
-  background: linear-gradient(90deg, #1fbec9 0%, #1fbec9 49.9%, #cccccc 50%, #cccccc 100%);
+  background: linear-gradient(90deg, rgb(31, 190, 201) 0%, rgb(31, 190, 201) 49.9%, rgb(204, 204, 204) 50%, rgb(204, 204, 204) 100%);
 }
 .wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .result .text, .wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .result .step {
   color: #EC2C25;
