--- a/res/scss/view/_settings-onboarding.scss
+++ b/res/scss/view/_settings-onboarding.scss
@@ -21,15 +21,28 @@
 		 display: flex;
 //		 flex: 1;
 		 justify-content: space-between;
+
 		 settinglist {
-			 flex: 0 0 50%;
-       background-color: #F4FBFC;
+			 //flex: 0 0 50%;
+       background-color: #116C7E; //#F4FBFC;
        padding: 12px;
        margin-top: 30px;
+       setting {
+         background-color: #116C7E ;
+       }
        &:first-child {
           border-right: 8px solid #fff;
        }
-		 }
+       &.now-active
+       {
+         background-color: #F4FBFC;
+         setting {
+           background-color: #F4FBFC ;
+         }
+
+       }
+     }
+
 	}
 
 
