--- a/res/css/shortpixel-settings.css
+++ b/res/css/shortpixel-settings.css
@@ -570,6 +570,31 @@ div.spio-modal-title {
   text-decoration: none;
   margin-top: -1px;
 }
+.wrap.is-shortpixel-settings-page .ajax-save-done {
+  position: fixed;
+  bottom: 0;
+  width: 60%;
+  background-color: #fff;
+  border: 2px solid #000;
+  left: 20%;
+  border-radius: 25px 25px 0 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 16px;
+  z-index: 10;
+  transition: all 1s ease-out;
+  margin-bottom: -1000px;
+}
+.wrap.is-shortpixel-settings-page .ajax-save-done.show {
+  margin: 0;
+  transition: all 1s ease-in;
+}
+.wrap.is-shortpixel-settings-page .ajax-save-done h1 {
+  font-size: 48px;
+  display: inherit;
+  margin-left: 16px;
+}
 .wrap.is-shortpixel-settings-page section.setting-tab .option-content {
   display: inline-block;
 }
@@ -840,7 +865,7 @@ div.spio-modal-title {
 .wrap.is-shortpixel-settings-page .excludeSizeOption input {
   margin-right: 8px;
 }
-.wrap.is-shortpixel-settings-page .deliverWebpTypes, .wrap.is-shortpixel-settings-page .deliverWebpAlteringTypes {
+.wrap.is-shortpixel-settings-page .deliverWebpTypes, .wrap.is-shortpixel-settings-page .deliverAlteringTypesPicture {
   margin: 16px 0 16px 16px;
   padding: 2px;
 }
