--- a/res/scss/view/_settings.scss
+++ b/res/scss/view/_settings.scss
@@ -142,6 +142,42 @@
 	    margin-top: -1px;
 	}
 
+	.ajax-save-done
+	{
+		 position: fixed;
+		 bottom: 0;
+		 width: 60%;
+	//	 height: 250px;
+		 background-color: #fff;
+		 border: 2px solid #000;
+		 left: 20%;
+		// border-radius-top-left: 25px;
+		 border-radius: 25px 25px 0 0;
+		 display: flex;
+		 flex-direction: column;
+		 align-items: center;
+		 padding: 16px;
+		 z-index: 10;
+		// height: 0;
+		 transition: all 1s ease-out;
+		 margin-bottom: -1000px;
+		 &.show {
+			 margin: 0;
+			 transition: all 1s ease-in;
+
+		 }
+		 .icon
+		 {
+			//		width: 40px;
+			//		filter: brightness(0) saturate(100%) invert(45%) sepia(67%) saturate(439%) hue-rotate(100deg) brightness(99%) contrast(92%);
+		 }
+		 h1 {
+				font-size: 48px;
+				display: inherit;
+				margin-left: 16px;
+		 }
+	}
+
   //tabs
   section.setting-tab
   {
