--- a/res/css/shortpixel-settings.css
+++ b/res/css/shortpixel-settings.css
@@ -17,22 +17,15 @@ i.documentation {
 }
 
 div.spio-modal-shade {
-  position: fixed;
-  /* Stay in place */
-  z-index: 10;
-  /* Sit on top - zindex wars  */
+  position: fixed; /* Stay in place */
+  z-index: 10; /* Sit on top - zindex wars  */
   left: 0;
   top: 0;
-  width: 100%;
-  /* Full width */
-  height: 100%;
-  /* Full height */
-  overflow: auto;
-  /* Enable scroll if needed */
-  background-color: black;
-  /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4);
-  /* Black w/ opacity */
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
 
 div.spio-modal {
@@ -43,13 +36,10 @@ div.spio-modal {
   background-position: center;
   padding: 20px 16px 16px;
   border: 1px solid #888;
-  width: 40%;
-  /* Could be more or less, depending on screen size */
+  width: 40%; /* Could be more or less, depending on screen size */
   max-width: 100%;
-  min-width: 300px;
-  /* Could be more or less, depending on screen size */
-  z-index: 100;
-  /* Proper z-index */
+  min-width: 300px; /* Could be more or less, depending on screen size */
+  z-index: 100; /* Proper z-index */
   position: fixed;
   top: 10%;
   left: 30%;
@@ -81,8 +71,7 @@ div.spio-modal-title {
   display: none;
 }
 
-.wrap.is-shortpixel-settings-page {
-  /* TABS CONTROLS */
+.wrap.is-shortpixel-settings-page { /* TABS CONTROLS */
   /* .submit {
   	.button {
   		min-height: 44px;
@@ -996,21 +985,46 @@ div.spio-modal-title {
   justify-content: space-between;
 }
 .wrap.is-shortpixel-settings-page #tab-nokey .onboarding-join-wrapper settinglist {
-  background-color: #116C7E;
+  background-color: #fff;
+  width: 50%;
   padding: 12px;
   margin-top: 30px;
+  border: 0;
 }
 .wrap.is-shortpixel-settings-page #tab-nokey .onboarding-join-wrapper settinglist setting {
-  background-color: #116C7E;
+  background-color: #fff;
 }
 .wrap.is-shortpixel-settings-page #tab-nokey .onboarding-join-wrapper settinglist:first-child {
-  border-right: 8px solid #fff;
+  margin-right: 8px;
 }
 .wrap.is-shortpixel-settings-page #tab-nokey .onboarding-join-wrapper settinglist.now-active {
   background-color: #F4FBFC;
+  border: 1px solid #000;
 }
 .wrap.is-shortpixel-settings-page #tab-nokey .onboarding-join-wrapper settinglist.now-active setting {
   background-color: #F4FBFC;
+}
+.wrap.is-shortpixel-settings-page #tab-nokey .onboarding-join-wrapper settinglist.new-customer #tos.invalid {
+  border: 2px solid #ff0000;
+}
+.wrap.is-shortpixel-settings-page #tab-nokey .onboarding-join-wrapper settinglist.new-customer .shortpixel-settings-error {
+  color: #ff0000;
+}
+.wrap.is-shortpixel-settings-page #tab-nokey .submit-errors button.notice-dismiss {
+  display: none;
+}
+.wrap.is-shortpixel-settings-page #tab-nokey .onboard-submit {
+  margin: 25px 0;
+  text-align: center;
+}
+.wrap.is-shortpixel-settings-page #tab-nokey .onboard-submit button {
+  width: 250px;
+}
+.wrap.is-shortpixel-settings-page #tab-nokey .onboard-submit setting {
+  background: #fff;
+}
+.wrap.is-shortpixel-settings-page #tab-nokey .onboard-submit setting error {
+  width: 100%;
 }
 .wrap.is-shortpixel-settings-page #tab-tools .button {
   min-height: 44px;
