--- a/res/scss/view/_settings-onboarding.scss
+++ b/res/scss/view/_settings-onboarding.scss
@@ -24,26 +24,70 @@
 
 		 settinglist {
 			 //flex: 0 0 50%;
-       background-color: #116C7E; //#F4FBFC;
+       background-color: #fff; //#F4FBFC;
+       width: 50%;
        padding: 12px;
        margin-top: 30px;
+       border: 0;
        setting {
-         background-color: #116C7E ;
+         background-color: #fff ;
        }
        &:first-child {
-          border-right: 8px solid #fff;
+        //  border-right: 8px solid #fff;
+        margin-right: 8px;
        }
        &.now-active
        {
          background-color: #F4FBFC;
+      //   transition: all ease-out 0.5s;
+         border: 1px solid #000;
+
          setting {
            background-color: #F4FBFC ;
-         }
 
+         }
+       }
+       &.new-customer
+       {
+           #tos {
+              &.invalid
+              {
+                 border: 2px solid #ff0000;
+              }
+           }
+           .shortpixel-settings-error
+           {
+              color: #ff0000;
+           }
        }
      }
 
 	}
 
+  .submit-errors
+  {
+
+        button.notice-dismiss {
+          display: none;
+        }
+     
+  }
+  .onboard-submit
+  {
+     margin: 25px 0;
+     text-align: center;
+     button {
+        width: 250px;
+     }
+
+     setting {
+        background: #fff;
+        error
+        {
+           width: 100%;
+        }
+     }
+
+  }
 
 } // tab-nokey
