Work on exclusions, updates to layout / apikey handler fixes

--- a/res/css/shortpixel-bulk.css
+++ b/res/css/shortpixel-bulk.css
@@ -66,6 +66,24 @@
   vertical-align: middle;
   margin-right: 4px;
 }
+.wrap.is-shortpixel-bulk-page .shortpixel-icon.alert {
+  background-image: url("../images/icon/alert.svg");
+}
+.wrap.is-shortpixel-bulk-page .shortpixel-icon.arrow-right {
+  background-image: url("../images/icon/arrow-right.svg");
+}
+.wrap.is-shortpixel-bulk-page .shortpixel-icon.arrows-left-right {
+  background-image: url("../images/icon/arrows-left-right.svg");
+}
+.wrap.is-shortpixel-bulk-page .shortpixel-icon.arrows-up-down {
+  background-image: url("../images/icon/arrows-up-down.svg");
+}
+.wrap.is-shortpixel-bulk-page .shortpixel-icon.box-archive {
+  background-image: url("../images/icon/box-archive.svg");
+}
+.wrap.is-shortpixel-bulk-page .shortpixel-icon.bulk {
+  background-image: url("../images/icon/bulk.svg");
+}
 .wrap.is-shortpixel-bulk-page .shortpixel-icon.cdn {
   background-image: url("../images/icon/cdn.svg");
 }
@@ -77,6 +95,12 @@
 }
 .wrap.is-shortpixel-bulk-page .shortpixel-icon.delivery {
   background-image: url("../images/icon/delivery.svg");
+}
+.wrap.is-shortpixel-bulk-page .shortpixel-icon.exclusions {
+  background-image: url("../images/icon/exclusions.svg");
+}
+.wrap.is-shortpixel-bulk-page .shortpixel-icon.edit {
+  background-image: url("../images/icon/edit.svg");
 }
 .wrap.is-shortpixel-bulk-page .shortpixel-icon.feedback {
   background-image: url("../images/icon/feedback.svg");
@@ -96,29 +120,20 @@
 .wrap.is-shortpixel-bulk-page .shortpixel-icon.tools {
   background-image: url("../images/icon/tools.svg");
 }
+.wrap.is-shortpixel-bulk-page .shortpixel-icon.trash {
+  background-image: url("../images/icon/trash.svg");
+}
 .wrap.is-shortpixel-bulk-page .shortpixel-icon.webp_avif {
   background-image: url("../images/icon/webp_avif.svg");
 }
 .wrap.is-shortpixel-bulk-page .shortpixel-icon.photo {
   background-image: url("../images/icon/photo.svg");
 }
-.wrap.is-shortpixel-bulk-page .shortpixel-icon.box-archive {
-  background-image: url("../images/icon/box-archive.svg");
-}
-.wrap.is-shortpixel-bulk-page .shortpixel-icon.bulk {
-  background-image: url("../images/icon/bulk.svg");
-}
 .wrap.is-shortpixel-bulk-page .shortpixel-icon.ok {
   background-image: url("../images/icon/ok.svg");
 }
 .wrap.is-shortpixel-bulk-page .shortpixel-icon.warning {
   background-image: url("../images/icon/warning.svg");
-}
-.wrap.is-shortpixel-bulk-page .shortpixel-icon.alert {
-  background-image: url("../images/icon/alert.svg");
-}
-.wrap.is-shortpixel-bulk-page .shortpixel-icon.arrow-right {
-  background-image: url("../images/icon/arrow-right.svg");
 }
 .wrap.is-shortpixel-bulk-page .shortpixel-icon.key {
   background-image: url("../images/icon/key.svg");
@@ -128,12 +143,6 @@
 }
 .wrap.is-shortpixel-bulk-page .shortpixel-icon.switch {
   background-image: url("../images/icon/switch.svg");
-}
-.wrap.is-shortpixel-bulk-page .shortpixel-icon.arrows-left-right {
-  background-image: url("../images/icon/arrows-left-right.svg");
-}
-.wrap.is-shortpixel-bulk-page .shortpixel-icon.arrows-up-down {
-  background-image: url("../images/icon/arrows-up-down.svg");
 }
 .wrap.is-shortpixel-bulk-page .shortpixel-icon.help-circle {
   background-image: url("../images/icon/help-circle.svg");
