--- a/res/scss/view/_settings-overview.scss
+++ b/res/scss/view/_settings-overview.scss
@@ -89,7 +89,7 @@
               width: 50px;
               height: 40px;
               filter: $filter_green;
-              &.switch { width: 60px; }
+            //  &.switch { width: 60px; }
             }
             span
             {
